--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.3.1",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "axios": "^1.6.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
